# svo_edgelet_ros

./: run_air2_svo.sh
devel/: .catkin
devel/lib/image_node/: publisher
devel/lib/pkgconfig/: image_node.pc  svo_edgelete_live.pc
devel/lib/svo_edgelete_live/: svo_pose  test_live_vo  test_pipel_euroc  test_pipeline
devel/share/image_node/cmake/: image_nodeConfig.cmake
devel/share/svo_edgelete_live/cmake/: svo_edgelete_liveConfig.cmake
src/image_node/: CMakeLists.txt
src/image_node/src/: input_data.yaml  main_pub.cpp
